--- a/questionnaire/static/css/wizzard.css
+++ b/questionnaire/static/css/wizzard.css
@@ -1,5 +1,6 @@
 .nav-wizard{
-    float: left;
+    width: 165px !important;
+    display: table-cell;
 }
 
 .wizard a {
